; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_intel_panel.c_intel_panel_disable_backlight.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_intel_panel.c_intel_panel_disable_backlight.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { %struct.drm_i915_private* }
%struct.drm_i915_private = type { i32 }
%struct.TYPE_2__ = type { i32 }

@BLC_PWM_CPU_CTL2 = common dso_local global i32 0, align 4
@BLC_PWM_CTL2 = common dso_local global i32 0, align 4
@BLM_PWM_ENABLE = common dso_local global i32 0, align 4
@BLC_PWM_PCH_CTL1 = common dso_local global i32 0, align 4
@BLM_PCH_PWM_ENABLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @intel_panel_disable_backlight(%struct.drm_device* %0) #0 {
  %2 = alloca %struct.drm_device*, align 8
  %3 = alloca %struct.drm_i915_private*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.drm_device* %0, %struct.drm_device** %2, align 8
  %6 = load %struct.drm_device*, %struct.drm_device** %2, align 8
  %7 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %6, i32 0, i32 0
  %8 = load %struct.drm_i915_private*, %struct.drm_i915_private** %7, align 8
  store %struct.drm_i915_private* %8, %struct.drm_i915_private** %3, align 8
  %9 = load %struct.drm_i915_private*, %struct.drm_i915_private** %3, align 8
  %10 = getelementptr inbounds %struct.drm_i915_private, %struct.drm_i915_private* %9, i32 0, i32 0
  store i32 0, i32* %10, align 4
  %11 = load %struct.drm_device*, %struct.drm_device** %2, align 8
  %12 = call i32 @intel_panel_actually_set_backlight(%struct.drm_device* %11, i32 0)
  %13 = load %struct.drm_device*, %struct.drm_device** %2, align 8
  %14 = call %struct.TYPE_2__* @INTEL_INFO(%struct.drm_device* %13)
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = icmp sge i32 %16, 4
  br i1 %17, label %18, label %49

18:                                               ; preds = %1
  %19 = load %struct.drm_device*, %struct.drm_device** %2, align 8
  %20 = call i64 @HAS_PCH_SPLIT(%struct.drm_device* %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %18
  %23 = load i32, i32* @BLC_PWM_CPU_CTL2, align 4
  br label %26

24:                                               ; preds = %18
  %25 = load i32, i32* @BLC_PWM_CTL2, align 4
  br label %26

26:                                               ; preds = %24, %22
  %27 = phi i32 [ %23, %22 ], [ %25, %24 ]
  store i32 %27, i32* %4, align 4
  %28 = load i32, i32* %4, align 4
  %29 = load i32, i32* %4, align 4
  %30 = call i32 @I915_READ(i32 %29)
  %31 = load i32, i32* @BLM_PWM_ENABLE, align 4
  %32 = xor i32 %31, -1
  %33 = and i32 %30, %32
  %34 = call i32 @I915_WRITE(i32 %28, i32 %33)
  %35 = load %struct.drm_device*, %struct.drm_device** %2, align 8
  %36 = call i64 @HAS_PCH_SPLIT(%struct.drm_device* %35)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %48

38:                                               ; preds = %26
  %39 = load i32, i32* @BLC_PWM_PCH_CTL1, align 4
  %40 = call i32 @I915_READ(i32 %39)
  store i32 %40, i32* %5, align 4
  %41 = load i32, i32* @BLM_PCH_PWM_ENABLE, align 4
  %42 = xor i32 %41, -1
  %43 = load i32, i32* %5, align 4
  %44 = and i32 %43, %42
  store i32 %44, i32* %5, align 4
  %45 = load i32, i32* @BLC_PWM_PCH_CTL1, align 4
  %46 = load i32, i32* %5, align 4
  %47 = call i32 @I915_WRITE(i32 %45, i32 %46)
  br label %48

48:                                               ; preds = %38, %26
  br label %49

49:                                               ; preds = %48, %1
  ret void
}

declare dso_local i32 @intel_panel_actually_set_backlight(%struct.drm_device*, i32) #1

declare dso_local %struct.TYPE_2__* @INTEL_INFO(%struct.drm_device*) #1

declare dso_local i64 @HAS_PCH_SPLIT(%struct.drm_device*) #1

declare dso_local i32 @I915_WRITE(i32, i32) #1

declare dso_local i32 @I915_READ(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
